# release-doc-agent

./: .gitignore  DESIGN.md  README.md  SETUP_INSTRUCTIONS.md
backend/: .env.example  config.py  llm_client.py  logger.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base.py  digester.py  planner.py  reviewer.py  writer.py
backend/connectors/: __init__.py  docs.py  github.py  jira.py
backend/evaluation/: evaluator.py
backend/mock_data/: commits.json  jira_tickets.json  pull_requests.json
backend/mock_data/docs/: api-reference.md  auth-guide.md  onboarding.md
backend/mock_data/gold/: v2.5.0.json
backend/rag/: indexer.py  retriever.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_config.py  test_connectors.py  test_digester_stage1.py  test_digester_stage2.py  test_digester_stage3.py  test_evaluation.py  test_planner.py  test_rag.py
docs/: ARCHITECTURE.md  DESIGN.md  Release_Documentation_Agent_Architecture.docx
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: GeneratePanel.tsx  ReleaseCard.tsx
