[project]
name = "release-doc-agent"
version = "1.0.0"
description = "AI-powered automated release documentation agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "openai==1.51.0",
    "numpy==2.1.1",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0", "httpx==0.27.2"]
